<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screens.CoinDetailFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineImageViewBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />


    <ImageView
        android:id="@+id/imageViewCoinLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/coin_image"
        android:src="@mipmap/ic_launcher_foreground"
        app:layout_constraintBottom_toTopOf="@id/guidelineImageViewBorder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTextViewsBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <TextView
        android:id="@+id/textViewCryptoName"
        style="@style/coin_names"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textColor="#C2B215F4"
        app:layout_constraintEnd_toStartOf="@id/textViewSlash"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineTextViewsBorder"
        tools:text="BTC" />

    <TextView
        android:id="@+id/textViewSlash"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/slash"
        android:textColor="#E8C613"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/textViewCryptoName"
        app:layout_constraintEnd_toStartOf="@id/textViewCurrencyName"
        app:layout_constraintStart_toEndOf="@id/textViewCryptoName"
        app:layout_constraintTop_toTopOf="@id/textViewCryptoName" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCoinInfoBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <TextView
        android:id="@+id/textViewCurrencyName"
        style="@style/coin_names"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textColor="#0BA6F1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textViewSlash"
        app:layout_constraintTop_toBottomOf="@id/guidelineTextViewsBorder"
        tools:text="USD" />

    <LinearLayout
        android:id="@+id/coin_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineCoinInfoBorder">

        <androidx.cardview.widget.CardView
            style="@style/card_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_label_price"
                    style="@style/coin_attribute_label_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/price"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/coinPrice"
                    style="@style/lastUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toEndOf="@id/tv_label_price"
                    tools:text="245454" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/card_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_label_top_price"
                    style="@style/coin_attribute_label_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/max_in_day"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/coinHighestPrice"
                    style="@style/lastUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="#FA09FB36"
                    app:layout_constraintStart_toEndOf="@id/tv_label_top_price"
                    tools:text="245454" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/card_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_label_lowest_price"
                    style="@style/coin_attribute_label_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/min_for_day"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/coinLowestPrice"
                    style="@style/lastUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="#F80707"
                    app:layout_constraintStart_toEndOf="@id/tv_label_lowest_price"
                    tools:text="245454" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/card_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_label_last_market"
                    style="@style/coin_attribute_label_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/last_market"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tvLastMarket"
                    style="@style/lastUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toEndOf="@id/tv_label_last_market"
                    tools:text="245454" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/card_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_label_last_update"
                    style="@style/coin_attribute_label_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/last_update"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tvLastUpdate"
                    style="@style/lastUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toEndOf="@id/tv_label_last_update"
                    tools:text="245454" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>